# jugaad-backend

./: .gitignore  Dockerfile  app.py  mailer.py  pyproject.toml  railway_dump.sql  requirements.txt  sample.py  scheduler.py  worker.py
alembic/: env.py
alembic/versions/: c735f901e2d8_add_email_sent_count_for_number_of_.py
base_models/: base_models.py
models/: models.py
settings/: base.py
