[project]
name = "draco"
version = "0.1.0"
description = "This is for the backend for JioMart Scrapper"
authors = [
    {name = "Sooraj Sivadasan",email = "cherrycheeks404@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "firebase-admin (>=6.9.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "brevo-python (>=1.1.2,<2.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
