[tool.poetry]
name = "draco"
version = "0.1.0"
description = "This is for the backend for JioMart Scrapper"
authors = ["Sooraj Sivadasan <cherrycheeks404@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "*"
firebase-admin = "*"
sqlalchemy = "*"
aiosqlite = "*"
greenlet = "*"
httpx = "*"
apscheduler = "*"
brevo-python = "*"
geopandas = "*"
shapely = "*"
uvicorn = "^0.34.3"
asyncpg = "^0.30.0"
aiosmtplib = "^4.0.1"
haversine = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
